[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
name = "sdl2testing"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.9"
serde = "1.0.17"
serde_derive = "1.0.17"
time = "0.1.38"
toml = "0.4.5"

[dependencies.sdl2]
default-features = false
features = [
    "ttf",
    "image",
    "mixer",
]
version = "0.30.0"
